--- a/accounts/templates/accounts/SignUp.html
+++ b/accounts/templates/accounts/SignUp.html
@@ -7,7 +7,7 @@
     <p style="color:red;">양식에 맞게 작성해주세요.</p>
     {% endif %}
 
-    <form method="post" action="{% url 'accounts:SignUp' %}">
+    <form method="post" action="{% url 'accounts:signup' %}">
 
     {% csrf_token %} 
 
