--- a/accounts/templates/accounts/Index.html
+++ b/accounts/templates/accounts/Index.html
@@ -1,2 +1,4 @@
 Index 페이지 
 <li><a href="{% url 'accounts:signup' %}">  회원가입 </a></li>
+<li><a href="{% url 'accounts:login' %}">  로그인 </a></li>
+<li><a href="{% url 'accounts:logout' %}">  로그아웃 </a></li>
