--- a/accounts/templates/accounts/Index.html
+++ b/accounts/templates/accounts/Index.html
@@ -2,3 +2,4 @@ Index 페이지
 <li><a href="{% url 'accounts:signup' %}">  회원가입 </a></li>
 <li><a href="{% url 'accounts:login' %}">  로그인 </a></li>
 <li><a href="{% url 'accounts:logout' %}">  로그아웃 </a></li>
+<li><a href="{% url 'accounts:profile' %}"> 개인페이지 </a></li>
