--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -52,5 +52,6 @@
     </table>
 
     <button onclick="location.href='/accounts/update'">회원 정보 수정</button>
-    <a href="{% url 'accounts:Index' %}"><button>메인화면</button> </a>
+    <button onclick="location.href='/accounts/password'">비밀번호 변경</button>
+    <button onclick="location.href='/accounts'">메인화면</button>
 {% endif %}
