--- a/accounts/templates/accounts/Index.html
+++ b/accounts/templates/accounts/Index.html
@@ -21,4 +21,5 @@
     로그아웃 상태
     <li><a href="{% url 'accounts:signup' %}">  회원가입 </a></li>
     <li><a href="{% url 'accounts:login' %}">  로그인 </a></li>
+    <li><a href="{% url 'password_reset' %}"> 비밀번호 찾기 </a></li>
 {% endif %}
