--- a/accounts/templates/accounts/Index.html
+++ b/accounts/templates/accounts/Index.html
@@ -13,6 +13,7 @@
     <p>Welcome, <b>{{ user.name }}. </b>Thanks for logging in.</p>
 <li><a href="{% url 'accounts:logout' %}">  로그아웃 </a></li>
 <li><a href="{% url 'accounts:profile' %}"> 개인페이지 </a></li>
+<li><a href="{% url 'letter:write' %}"> 편지쓰러가기  </a></li>
 
 
 
