Add letter & accounts
Add write letter to others(random/all)
Add calendar view

--- a/accounts/templates/accounts/Index.html
+++ b/accounts/templates/accounts/Index.html
@@ -14,6 +14,7 @@
 <li><a href="{% url 'accounts:logout' %}">  로그아웃 </a></li>
 <li><a href="{% url 'accounts:profile' %}"> 개인페이지 </a></li>
 <li><a href="{% url 'letter:writeToMe' %}"> 나에게 편지쓰러가기  </a></li>
+<li><a href="{% url 'letter:writeToOthers' %}"> 타인에게 편지쓰러가기  </a></li>
 
 
 
