--- a/accounts/templates/accounts/Index.html
+++ b/accounts/templates/accounts/Index.html
@@ -15,7 +15,7 @@
 <li><a href="{% url 'accounts:profile' %}"> 개인페이지 </a></li>
 <li><a href="{% url 'letter:writeToMe' %}"> 나에게 편지쓰러가기  </a></li>
 <li><a href="{% url 'letter:writeToOthers' %}"> 타인에게 편지쓰러가기  </a></li>
-
+<li><a href="{% url 'letter:to_me' %}"> 나에게 쓴 편지 목록  </a></li>
 
 
   
