Fix print letter_list sent by me

--- a/letter/templates/letter/to_me.html
+++ b/letter/templates/letter/to_me.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 <h2>receive letter</h2>
-<h3>To, morrow mesage for {{ user.memberId }} </h3>
+<h3>To, morrow mesage for {{ nickname }} </h3>
 
 {% for toMe in result %}
     {{toMe.letterId}}&nbsp;&nbsp;&nbsp;
