Add print letterFromOthers & Fix error
Add print letter_list by others
Fix print letter_list sent by me

--- a/accounts/templates/accounts/Index.html
+++ b/accounts/templates/accounts/Index.html
@@ -16,6 +16,7 @@
 <li><a href="{% url 'letter:writeToMe' %}"> 나에게 편지쓰러가기  </a></li>
 <li><a href="{% url 'letter:writeToOthers' %}"> 타인에게 편지쓰러가기  </a></li>
 <li><a href="{% url 'letter:to_me' %}"> 나에게 쓴 편지 목록  </a></li>
+<li><a href="{% url 'letter:letterFrmOthers' %}"> 타인에게 받은 편지 목록  </a></li>
 
 
   
