Add letterSentME trash func &
Add letter_list sent by me
Add trash func
Add phone format

--- a/letter/templates/letter/letterFrmMe.html
+++ b/letter/templates/letter/letterFrmMe.html
@@ -13,7 +13,7 @@
 </tr>
 
 {% for toMe in result %}
-    <tr onclick="location.href='/letter/{{ toMe.letterId }}/'"">
+    <tr onclick="location.href='/letter/receive/detail/{{ toMe.letterId }}?next={{'"">
         <td>{{toMe.letterId}}&nbsp;&nbsp;&nbsp;</td>
         <td>{{toMe.senderId}}&nbsp;&nbsp;&nbsp;</td>
         <td>{{toMe.content}}&nbsp;&nbsp;&nbsp;</td>
