--- a/accounts/templates/accounts/Index.html
+++ b/accounts/templates/accounts/Index.html
@@ -12,11 +12,15 @@
     로그인 상태
     <p>Welcome, <b>{{ user.name }}. </b>Thanks for logging in.</p>
 <li><a href="{% url 'accounts:logout' %}">  로그아웃 </a></li>
-<li><a href="{% url 'accounts:profile' %}"> 개인페이지 </a></li>
+<li><a href="{% url 'accounts:profile' %}"> 개인페이지 </a></li><br>
+
 <li><a href="{% url 'letter:writeToMe' %}"> 나에게 편지쓰러가기  </a></li>
-<li><a href="{% url 'letter:writeToOthers' %}"> 타인에게 편지쓰러가기  </a></li>
-<li><a href="{% url 'letter:to_me' %}"> 나에게 쓴 편지 목록  </a></li>
-<li><a href="{% url 'letter:letterFrmOthers' %}"> 타인에게 받은 편지 목록  </a></li>
+<li><a href="{% url 'letter:writeToOthers' %}"> 타인에게 편지쓰러가기  </a></li><br>
+
+<li><a href="{% url 'letter:letterFrmMe' %}"> 나에게 쓴 편지 목록  </a></li>
+<li><a href="{% url 'letter:letterFrmOthers' %}"> 타인에게 받은 편지 목록  </a></li><br>
+
+<li><a href="{% url 'letter:letterIsent' %}"> 내가 보낸 편지 목록  </a></li>
 
 
   
