--- a/accounts/templates/accounts/update.html
+++ b/accounts/templates/accounts/update.html
@@ -13,6 +13,6 @@
 <form method="POST">
     {% csrf_token %}
     
-    {{ update_form.as_table }}
+    {{ update_form.as_p }}
     <input type="submit" value="Submit"/>
 </form>
