--- a/letter/templates/letter/letterFrmMe.html
+++ b/letter/templates/letter/letterFrmMe.html
@@ -13,11 +13,14 @@
 </tr>
 
 {% for toMe in result %}
-    <tr onclick="location.href='/letter/receive/detail/{{ toMe.letterId }}?next={{'"">
-        <td>{{toMe.letterId}}&nbsp;&nbsp;&nbsp;</td>
-        <td>{{toMe.senderId}}&nbsp;&nbsp;&nbsp;</td>
-        <td>{{toMe.content}}&nbsp;&nbsp;&nbsp;</td>
-        <td>{{toMe.sendDate}}</td>
+    <tr>
+        <li onclick="location.href='/letter/receive/detail/{{ toMe.letterId }}?next={{'">
+            <td>{{toMe.letterId}}&nbsp;&nbsp;&nbsp;</td>
+            <td>{{toMe.senderId}}&nbsp;&nbsp;&nbsp;</td>
+            <td>{{toMe.content}}&nbsp;&nbsp;&nbsp;</td>
+            <td>{{toMe.sendDate}}</td>
+        </li>
+        <td onclick="location.href='/letter/delreceive/{{toMe.letterId}}/'">쓰레기통</td>
     </tr>
 {% endfor %}
 </table>
