--- a/letter/templates/letter/letter_detail.html
+++ b/letter/templates/letter/letter_detail.html
@@ -11,7 +11,7 @@
     </tr>
     <tr>
         <td>receivedate</td>
-        <td>{{letter.receiveDate}}</td>
+        <td>{{letter.receiveDate | date:"Y.m.d H:i "}}</td>
     </tr>
     <tr>
         <td>content</td>
