--- a/letter/templates/letter/show_delete_list.html
+++ b/letter/templates/letter/show_delete_list.html
@@ -1,8 +1,14 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h2>Trash List</h2>
-
+<h2> {{ nickname}}Trash List</h2>
+{% if messages %}
+	{% for message in messages %}
+        <script>
+            alert('{{ message }}');
+        </script>
+	{% endfor %}
+    {% endif %}
 <table>
 <tr>
     <td>Idx</td>
@@ -10,21 +16,16 @@
     <td>Contents&nbsp;&nbsp;&nbsp;</td>
     <td>SendDate</td>
 </tr>
-<p>삭제 목록</p>
-{% for sendDel in resultsend %}
-    <tr onclick="location.href='/letter/{{ sendDel.letterId }}/'"">
-        <td>{{sendDel.letterId}}&nbsp;&nbsp;&nbsp;</td>
-        <td>{{sendDel.senderId}}&nbsp;&nbsp;&nbsp;</td>
-        <td>{{sendDel.content}}&nbsp;&nbsp;&nbsp;</td>
-        <td>{{sendDel.sendDate}}</td>
+<p>{{page}} 삭제 목록</p>
+<table>
+   
+{% for col in result %}
+    <tr onclick="location.href='/letter/{{page}}/detail/{{ col.letterId }}/'"">
+        <td>{{col.letterId}}&nbsp;&nbsp;&nbsp;</td>
+        <td>{{col.senderId}}&nbsp;&nbsp;&nbsp;</td>
+        <td>{{col.content}}&nbsp;&nbsp;&nbsp;</td>
+        <td>{{col.sendDate}}</td>
     </tr>
-{% endfor %}
-{% for receiveDel in resultreceive%}
-    <tr onclick="location.href='/letter/{{ sendDel.letterId }}/'"">
-        <td>{{receiveDel.letterId}}&nbsp;&nbsp;&nbsp;</td>
-        <td>{{receiveDel.senderId}}&nbsp;&nbsp;&nbsp;</td>
-        <td>{{receiveDel.content}}&nbsp;&nbsp;&nbsp;</td>
-        <td>{{receiveDel.sendDate}}</td>
 {% endfor %}
 </table>
 <a href="{% url 'accounts:Index' %}"><button>메인화면</button>
