--- a/accounts/templates/accounts/Index.html
+++ b/accounts/templates/accounts/Index.html
@@ -1,10 +1,10 @@
 <h2>Index 페이지 </h2>
 {% if messages %}
-	{% for message in messages %}
+   {% for message in messages %}
         <script>
             alert('{{ message }}');
         </script>
-	{% endfor %}
+   {% endfor %}
 {% endif %}
 
 
@@ -20,10 +20,11 @@
 <li><a href="{% url 'letter:letterFrmMe' %}"> 나에게 쓴 편지 목록  </a></li>
 <li><a href="{% url 'letter:letterFrmOthers' %}"> 타인에게 받은 편지 목록  </a></li><br>
 
-<li><a href="{% url 'letter:letterIsent' %}"> 내가 보낸 편지 목록  </a></li>
+<li><a href="{% url 'letter:letterIsent' %}"> 내가 보낸 편지 목록  </a></li> <br>
 
+<li><a href="/letter/trash/send"> 내가 보낸 편지 쓰레기통 </a></li>
+<li><a href="/letter/trash/receive"> 내가 받은 편지 쓰레기통  </a></li>
 
-  
 {% else %} 
     로그아웃 상태
     <li><a href="{% url 'accounts:signup' %}">  회원가입 </a></li>
