--- a/letter/templates/letter/letterFrmOthers.html
+++ b/letter/templates/letter/letterFrmOthers.html
@@ -11,15 +11,20 @@
     <td>Contents&nbsp;&nbsp;&nbsp;</td>
     <td>SendDate</td>
 </tr>
+{% if messages %}
+{% for message in messages %}
+    <script>
+        alert('{{ message }}');
+    </script>
+{% endfor %}
+{% endif %}
 recvLetter_result
 {% for frmOthers in result %}
     <tr>
-        <div  onclick="location.href='/letter/receive/detail/{{ frmOthers.letterId }}?next={{'">
-        <td>{{frmOthers.letterId}}&nbsp;&nbsp;&nbsp;</td>
-        <td>{{frmOthers.senderId}}&nbsp;&nbsp;&nbsp;</td>
-        <td>{{frmOthers.content}}&nbsp;&nbsp;&nbsp;</td>
-        <td>{{frmOthers.sendDate | date:"Y.m.d H:i "}}</td>
-    </div>
+        <td onclick="location.href='/letter/receive/detail/{{ frmOthers.letterId }}'">{{frmOthers.letterId}}&nbsp;&nbsp;&nbsp;</td>
+        <td onclick="location.href='/letter/receive/detail/{{ frmOthers.letterId }}'">{{frmOthers.senderId}}&nbsp;&nbsp;&nbsp;</td>
+        <td onclick="location.href='/letter/receive/detail/{{ frmOthers.letterId }}'">{{frmOthers.content}}&nbsp;&nbsp;&nbsp;</td>
+        <td onclick="location.href='/letter/receive/detail/{{ frmOthers.letterId }}'">{{frmOthers.sendDate | date:"Y.m.d H:i "}}</td>
         <td onclick="location.href='/letter/delreceive/{{frmOthers.letterId}}/'">쓰레기통</td>
     </tr>
 {% endfor %}
